--- a/html/landing.html
+++ b/html/landing.html
@@ -41,7 +41,7 @@
       <div class="landingDer">
         <div class="containerButton">
             <button class="button"><a href="reserva.html">reservar citas</a></button>
-            <button class="button">solicitar examenes</button>
+            <button class="button"><a href="examen.html">solicitar examenes</a></button>
             <button class="button">ver resultados</button>
         </div>
       </div>
