--- a/html/landing.html
+++ b/html/landing.html
@@ -42,7 +42,7 @@
         <div class="containerButton">
             <button class="button"><a href="reserva.html">reservar citas</a></button>
             <button class="button"><a href="examen.html">solicitar examenes</a></button>
-            <button class="button">ver resultados</button>
+            <button class="button"><a href="visualizacion.html">ver resultados</a></button>
         </div>
       </div>
     </section>
