--- a/html/reserva.html
+++ b/html/reserva.html
@@ -21,8 +21,8 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="headerTitulo">VetaPet🐾</h1>
-      <p class="headerUsuario" id="userHeader"></p>
+      <a href="landing.html"><h1 class="headerTitulo">VetaPet🐾</h1></a>
+      <p class="headerUsuario" id="userHeader">hola</p>
     </header>
     <section class="reservaContainer">
       <div class="reserva">
@@ -110,7 +110,7 @@
               </div>
             </div>
         
-            <button type="submit">Guardar Reserva</button>
+            <button type="submit" class="botonReserva">Guardar Reserva</button>
           </div>
         </form>
         
