--- a/html/visualizacion.html
+++ b/html/visualizacion.html
@@ -20,46 +20,47 @@
     />
   </head>
   <body>
-    <h1>Mis Solicitudes y Citas</h1>
+    <header class="header">
+        <a href="landing.html"><h1 class="headerTitulo">VetaPet🐾</h1></a>
+        <p class="headerUsuario" id="userHeader">hola</p>
+      </header>>
+    <section class="visualizadorContainer">
+      <h1 class="visualizacion">Mis Solicitudes y Citas</h1>
 
-    <div class="grid-container">
+      <div class="grid-container">
         <div class="grid-item">
-            <h2>Solicitudes de Exámenes</h2>
-            <table id="solicitudesTable">
-                <thead>
-                    <tr>
-                        <th>Dueño</th>
-                        <th>Mascota</th>
-                        <th>Tipo de Mascota</th>
-                        <th>Tipo de Examen</th>
-                        <th>Fecha</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Las solicitudes de exámenes se insertarán aquí -->
-                </tbody>
-            </table>
+          <h2>Solicitudes de Exámenes</h2>
+          <table id="solicitudesTable">
+            <thead>
+              <tr>
+                <th>Dueño</th>
+                <th>Mascota</th>
+                <th>Tipo de Mascota</th>
+                <th>Tipo de Examen</th>
+                <th>Fecha</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
         </div>
 
         <div class="grid-item">
-            <h2>Citas</h2>
-            <table id="citasTable">
-                <thead>
-                    <tr>
-                        <th>Dueño</th>
-                        <th>Mascota</th>
-                        <th>Tipo de Mascota</th>
-                        <th>Dirección</th>
-                        <th>Fecha</th>
-                        <th>Tipo de Pago</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Las citas se insertarán aquí -->
-                </tbody>
-            </table>
+          <h2>Citas</h2>
+          <table id="citasTable">
+            <thead>
+              <tr>
+                <th>Dueño</th>
+                <th>Mascota</th>
+                <th>Tipo de Mascota</th>
+                <th>Dirección</th>
+                <th>Fecha</th>
+                <th>Tipo de Pago</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
         </div>
-    </div>
-
+      </div>
+    </section>
   </body>
 </html>
